Fix logo overflow with mobile menu

--- a/asset/css/screen.css
+++ b/asset/css/screen.css
@@ -1,5 +1,5 @@
 ---
-layout: nil
+layout: null
 ---
 body {
     margin: 0;
@@ -145,6 +145,8 @@ h2 code, h3 code, h4 code, h5 code, h6 code {
     margin: -18px 5px;
     vertical-align: top;
     border: 0;
+    position: absolute;
+    z-index: 2;
 }
 
 .logo-text {
